Fix navbar contrast Relates #45

--- a/styles.css
+++ b/styles.css
@@ -39,19 +39,25 @@ nav {
 .nav__links {
   position: relative;
 }
+.nav__links > a {
+  color: hsl(0, 0%, 0%);
+  text-decoration: none;
+  padding: 0 2rem;
+  font-size: 1.2rem;
+}
+.nav__links > a:visited {
+  color: hsl(0, 0%, 0%);
+}
+.nav__links > a:hover {
+  color: hsla(0, 0%, 0%, 0.5);
+  transition: ease-in-out 0.3s;
+}
 .nav__logo {
   padding: 0 2rem;
   font-size: 1.5rem;
 }
-.nav__link--hover {
-  text-decoration: none;
-  color: var(--secondaryColor);
-  padding: 0 2rem;
-  font-size: 1.2rem;
-  transition: color 0.4s ease-out;
-}
-.nav__link--hover:hover {
-  opacity: 0.3;
+.nav__logo:hover {
+  color: hsla(0, 0%, 0%, 0.5);
   transition: ease-in-out 0.3s;
 }
 
